vertex paint with image texture #115214

Closed
opened 2023-11-20 23:07:13 +01:00 by beni · 5 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42

Blender Version
Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: 878f71061b8e
Worked: (3.6)

Short description of error
when using image texture in vertex paint mode, blender always change the color of texture to purple!
Exact steps for others to reproduce the error
simply select any texture for brush in vertex paint

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42 **Blender Version** Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: `878f71061b8e` Worked: (3.6) **Short description of error** when using image texture in vertex paint mode, blender always change the color of texture to purple! **Exact steps for others to reproduce the error** simply select any texture for brush in vertex paint
beni added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-20 23:07:13 +01:00

Reproduced

System Information
Operating system: Windows-10-10.0.23590-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.09

Blender Version
Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08

Reproduced **System Information** Operating system: Windows-10-10.0.23590-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.09 **Blender Version** Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08`
Member

Hi, thanks for the report. Can confirm the regression. Looks bad, bisecting.

Hi, thanks for the report. Can confirm the regression. Looks bad, bisecting.
Member

Originally caused by 087612c042
Then some commit between ecb3262bf049 - 5cdec2f12ab0 made it worse (maybe some color management change?).
cc @HooglyBoogly

Originally caused by 087612c042f51928dd851379372c2524bb81e50f Then some commit between `ecb3262bf049 - 5cdec2f12ab0` made it worse (maybe some color management change?). cc @HooglyBoogly
Julien Kaspar added
Type
Bug
and removed
Type
Report
labels 2023-12-14 11:56:31 +01:00
Member

Checking on this again, I can't reproduce this now. Maybe I'm doing something wrong though?

image

Checking on this again, I can't reproduce this now. Maybe I'm doing something wrong though? ![image](/attachments/2124a984-1fe2-4545-a689-d33fa94493c9)
Member

@HooglyBoogly , change texture color to rgb=1 , you'll notice the difference (BTW, resulting color is not "pink" anymore) .
I might be wrong but last time when I checked, paint_and_tex_color_alpha was giving the wrong color values

@HooglyBoogly , change texture color to rgb=1 , you'll notice the difference (BTW, resulting color is not "pink" anymore) . I might be wrong but last time when I checked, `paint_and_tex_color_alpha` was giving the wrong color values
Sergey Sharybin self-assigned this 2024-01-11 15:39:12 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-11 16:11:37 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115214
No description provided.